# digital-twin-physical-ai

./: .gitignore  PRD.md  README.md  building-an-llm-digital-twin.md  cli_query.py  data_flow.md  design.md  digital_twin.db  digital_twin_physical_ai_phase_2.md  init_db.py  langchain_agent.py  main.py  organize_dashboard.py  pyproject.toml  requirements.txt  run_full_system.py  run_server.py  twin_state.py
.github/workflows/: ci.yml
Sensor-simulator/: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt  test_results.txt  traceback.txt
Sensor-simulator/api/: server.py
Sensor-simulator/config/: modbus_map.yaml  mqtt_map.yaml  sensors.yaml
Sensor-simulator/core/: config_loader.py  registry.py  sensors.py
Sensor-simulator/protocols/: bacnet_server.py  bacnet_write.py  modbus_server.py  mqtt_client.py
Sensor-simulator/tests/: conftest.py  test_api.py  test_bacnet_priority.py  test_bacnet_schedule.py  test_load.py  test_modbus.py
Sensor-simulator/tools/: load_modbus.py
backend/api/: main.py
backend/core/: cognitive_layer.py  persistence_worker.py  twin_state.py
backend/database/: schema.sql
docs/: README.md
docs/architecture/: TECHNICAL_ARCHITECTURE.md  data_flow.md
docs/planning/: 02_protocol_specifications.md  03_security_architecture.md  brainstorming.md
docs/research/: LLM_DIGITAL_TWIN_RESEARCH.md
docs/specs/: ai_engine_technical_specification.md  (+1 more)
edge-ai/: EDGE_AI_WORKFLOW.md  README.md  build_exe.py  edge_ai_trainer.py  field_data_generator.py  model_ota_cli.py
firmware/: README.md
firmware/protocol_node/components/ai_engine/: CMakeLists.txt  README.md  ai_data_collector.c  ai_inference.cpp  ai_model_manager.c  ai_ring_buffer.c  idf_component.yml
firmware/protocol_node/components/ai_engine/include/: ai_config.h  ai_data_collector.h  ai_inference.h  ai_model_manager.h  ai_ring_buffer.h
infrastructure/: docker-compose.yml
planning/: 01_dashboard_requirements.md  04_system_integration.md  Digital Twin.drawio  brainstorming.md
scripts/: cli_query.py  init_db.py  integration_demo.py
simulator/: .env.example  Dockerfile  Key idea.md  generate_load_config.py  main.py  requirements.txt
(+53 files in other folders)
