[project]
name = "digital-twin-physical-ai"
version = "0.1.0"
description = "Industrial Digital Twin with Physical AI and Cognitive Reasoning"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "requests",
    "python-dotenv",
    "langchain-openai",
    "langchain-core",
    "langchain",
    "langchain-community",
    "paho-mqtt",
    "httpx",
    "pytest",
    "bacpypes",
    "pymodbus>=3.0.0",
    "PyYAML",
    "pyasyncore",
    "asyncua",
    "cpppo",
    "tensorflow-cpu",
    "scikit-learn",
    "joblib",
]

[tool.uv]
managed = true