[project]
name = "sensor-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bacpypes>=0.19.0",
    "paho-mqtt>=2.1.0",
    "pymodbus==3.6.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = "."
